[gd_scene load_steps=56 format=2]

[ext_resource path="res://Scripts/ParallaxLayerEstrela3.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ParallaxLayerEstrela.gd" type="Script" id=2]
[ext_resource path="res://Scripts/ParallaxLayerEstrela2.gd" type="Script" id=3]
[ext_resource path="res://Img/cometaParallax/cadente6.png" type="Texture" id=4]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado1.png" type="Texture" id=5]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado4.png" type="Texture" id=6]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado12.png" type="Texture" id=7]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado5.png" type="Texture" id=8]
[ext_resource path="res://Img/background_2.png" type="Texture" id=9]
[ext_resource path="res://Img/fundoPplaneta2.jpg" type="Texture" id=10]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado3.png" type="Texture" id=11]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado10.png" type="Texture" id=12]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado11.png" type="Texture" id=13]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado9.png" type="Texture" id=14]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado8.png" type="Texture" id=15]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado6.png" type="Texture" id=16]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado7.png" type="Texture" id=17]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado2.png" type="Texture" id=18]
[ext_resource path="res://Img/cometaParallax/cadente3.png" type="Texture" id=19]
[ext_resource path="res://Img/cometaParallax/cadente2.png" type="Texture" id=20]
[ext_resource path="res://Img/cometaParallax/cadente1.png" type="Texture" id=21]
[ext_resource path="res://Img/cometaParallax/cadente8.png" type="Texture" id=22]
[ext_resource path="res://Img/cometaParallax/cadente4.png" type="Texture" id=23]
[ext_resource path="res://Img/cometaParallax/cadente5.png" type="Texture" id=24]
[ext_resource path="res://Img/cometaParallax/cadente7.png" type="Texture" id=25]
[ext_resource path="res://Fontes/Fipps-Regular.otf" type="DynamicFontData" id=26]
[ext_resource path="res://Scripts/Dialogo.gd" type="Script" id=27]
[ext_resource path="res://Img/semFundo.png" type="Texture" id=28]
[ext_resource path="res://Img/Botoes/BOTAO_Dia.png" type="Texture" id=29]
[ext_resource path="res://Img/Botoes/BOTAO_Noite.png" type="Texture" id=30]
[ext_resource path="res://Img/Ovos/OVO-VERDE.png" type="Texture" id=31]
[ext_resource path="res://Img/Ovos/OVO-BLUE.png" type="Texture" id=32]
[ext_resource path="res://Img/planetas/praneta3.png" type="Texture" id=33]
[ext_resource path="res://Img/Rosto-Bigode/Glass-Mustache-branco.png" type="Texture" id=34]
[ext_resource path="res://Fontes/Retro Gaming.ttf" type="DynamicFontData" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 7 ) ],
"loop": true,
"name": "estrelas",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 4 ), ExtResource( 25 ), ExtResource( 22 ) ],
"loop": true,
"name": "cometa",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = ExtResource( 35 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.024 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonDia:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonNoite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 7
font_data = ExtResource( 26 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Aparecendo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Sumindo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Aparecendo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Sumindo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=15]
length = 7.4
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3, 3.15, 3.3, 3.45, 3.6, 3.75, 3.9, 4.05, 4.2, 4.35, 4.5, 4.65, 4.8, 4.95, 5.1, 5.25, 5.4, 5.55, 5.7, 5.85, 6, 6.15, 6.3, 6.45, 6.6, 6.75, 6.9, 7.05, 7.2, 7.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.35, 2.25, 3.15, 4.2, 5.1, 6, 6.6, 7.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 224 ), Vector2( 168, 248 ), Vector2( 96, 272 ), Vector2( 16, 264 ), Vector2( -56, 128 ), Vector2( -80, 64 ), Vector2( -16, 40 ), Vector2( 32, 16 ), Vector2( 104, 8 ), Vector2( 168, 64 ) ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Apaga"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.04 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
length = 2.54
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1, 0, 2, 3, 4 ]
}

[node name="Dialogo" type="Node2D"]
script = ExtResource( 27 )

[node name="Fundo" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Fundo"]

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground"]
scale = Vector2( 1.02188, 1 )
texture = ExtResource( 10 )
centered = false

[node name="ParallaxLayer6" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
position = Vector2( -9.52438, -26.2727 )
motion_mirroring = Vector2( 150, 130 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fundo/ParallaxBackground/ParallaxLayer6"]
position = Vector2( -12.3557, 31.8636 )
scale = Vector2( 0.331511, 0.375009 )
frames = SubResource( 1 )
animation = "estrelas"
frame = 7
playing = true
centered = false

[node name="ParallaxLayer7" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
position = Vector2( 32, 41.6359 )
motion_mirroring = Vector2( 150, 0 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fundo/ParallaxBackground/ParallaxLayer7"]
position = Vector2( 60.4002, 10.0596 )
rotation = 0.364774
scale = Vector2( 0.319046, 0.386383 )
frames = SubResource( 2 )
animation = "cometa"
frame = 3
playing = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
position = Vector2( 13.4929, 39.6044 )
motion_mirroring = Vector2( 300, 120 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 1.15451, 1.38178 )
texture = ExtResource( 9 )
centered = false

[node name="ParallaxLayer8" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
position = Vector2( -5.4299, 99.5667 )
motion_mirroring = Vector2( 300, 120 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground/ParallaxLayer8"]
scale = Vector2( 1.15451, 1.38178 )
texture = ExtResource( 9 )
centered = false

[node name="ParallaxLayer9" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
position = Vector2( -5.4299, 99.5667 )
motion_mirroring = Vector2( 300, 120 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground/ParallaxLayer9"]
scale = Vector2( 1.15451, 1.38178 )
texture = ExtResource( 9 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
modulate = Color( 0.592157, 0, 1, 1 )
position = Vector2( -62.4435, 43.9012 )
motion_mirroring = Vector2( 300, 70 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground/ParallaxLayer3"]
position = Vector2( 6.7818, 40.7818 )
scale = Vector2( 0.91873, 0.777368 )
texture = ExtResource( 9 )
centered = false

[node name="ParallaxLayer10" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
modulate = Color( 0.592157, 0, 1, 1 )
position = Vector2( -62.4435, 43.9012 )
motion_mirroring = Vector2( 300, 70 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground/ParallaxLayer10"]
position = Vector2( 6.7818, 40.7818 )
scale = Vector2( 0.91873, 0.777368 )
texture = ExtResource( 9 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
position = Vector2( -10.7622, 10.4336 )
motion_mirroring = Vector2( 300, 120 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground/ParallaxLayer4"]
position = Vector2( 7.14328, 12.587 )
scale = Vector2( 1.01195, 1.12699 )
texture = ExtResource( 9 )
centered = false

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Fundo/ParallaxBackground"]
position = Vector2( -9.96848, 65.1989 )
motion_mirroring = Vector2( 300, 50 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Fundo/ParallaxBackground/ParallaxLayer5"]
modulate = Color( 0.843137, 0.572549, 0.572549, 1 )
position = Vector2( 6.25238, 73.1681 )
scale = Vector2( 1.01474, 1.18695 )
texture = ExtResource( 9 )
centered = false

[node name="TextBox" type="CanvasLayer" parent="."]

[node name="TextBoxContainer" type="MarginContainer" parent="TextBox"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 12.0
margin_top = 32.088
margin_right = -8.0
margin_bottom = -80.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextBox/TextBoxContainer"]
margin_right = 140.0
margin_bottom = 16.0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="TextBox/TextBoxContainer"]
margin_right = 140.0
margin_bottom = 16.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="TextBox/TextBoxContainer/MarginContainer"]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 136.0
margin_bottom = 12.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextBox/TextBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 136.0
margin_bottom = 12.0

[node name="Start" type="Label" parent="TextBox/TextBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 5.0
margin_bottom = 8.0
rect_min_size = Vector2( 5, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "*"

[node name="Label" type="Label" parent="TextBox/TextBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 9.0
margin_right = 120.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "Text! "
autowrap = true

[node name="End" type="Label" parent="TextBox/TextBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 132.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 0 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 4 )
text = "v"

[node name="AnimationPlayerTxtBox" type="AnimationPlayer" parent="TextBox/TextBoxContainer"]
anims/subindo = SubResource( 5 )

[node name="Tween" type="Tween" parent="TextBox"]

[node name="Botoes" type="Node" parent="TextBox"]

[node name="ButtonDia" type="TextureButton" parent="TextBox/Botoes"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 16.0
margin_top = 120.0
margin_right = 72.0
margin_bottom = 152.0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 29 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNoite" type="TextureButton" parent="TextBox/Botoes"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 88.0
margin_top = 120.0
margin_right = 144.0
margin_bottom = 152.0
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 30 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayerBotoes" type="AnimationPlayer" parent="TextBox/Botoes"]
anims/surgindoBotoes = SubResource( 6 )

[node name="btn" type="TextureButton" parent="TextBox"]
margin_left = 48.0
margin_top = 208.0
margin_right = 112.0
margin_bottom = 272.0
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 28 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Proximo" type="Label" parent="TextBox"]
margin_left = 56.0
margin_top = 232.0
margin_right = 102.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 7 )
text = "Proximo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimeProximo" type="AnimationPlayer" parent="TextBox/Proximo"]
anims/Sumindo = SubResource( 8 )

[node name="Ovos" type="Node" parent="."]

[node name="OVO-BLUE" type="Sprite" parent="Ovos"]
visible = false
position = Vector2( 80, 152 )
scale = Vector2( 2.625, 2.625 )
texture = ExtResource( 32 )
vframes = 2

[node name="AnimationOvoAzul" type="AnimationPlayer" parent="Ovos/OVO-BLUE"]
anims/Aparecendo = SubResource( 9 )
anims/Sumindo = SubResource( 10 )
anims/mexendo = SubResource( 11 )

[node name="OVO-VERDE" type="Sprite" parent="Ovos"]
visible = false
position = Vector2( 80, 152 )
scale = Vector2( 2.625, 2.625 )
texture = ExtResource( 31 )
vframes = 2
frame = 1

[node name="AnimationOvoVerde" type="AnimationPlayer" parent="Ovos/OVO-VERDE"]
anims/Aparecendo = SubResource( 12 )
anims/Sumindo = SubResource( 13 )
anims/mexendo = SubResource( 14 )

[node name="planeta" type="Node" parent="."]

[node name="planeta1" type="Sprite" parent="planeta"]
position = Vector2( 192, 224 )
scale = Vector2( 0.223084, 0.223084 )
texture = ExtResource( 33 )
hframes = 50

[node name="AnimationPlayerPlaneta" type="AnimationPlayer" parent="planeta/planeta1"]
anims/RodaRodaJequiti = SubResource( 15 )
anims/surgindopraneta = SubResource( 16 )

[node name="transição" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="transição"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AnimacaoTransicao" type="AnimationPlayer" parent="transição/ColorRect"]
autoplay = "Entrando"
anims/Entrando = SubResource( 17 )
anims/Saindo = SubResource( 18 )

[node name="Rosto-do-Criador" type="Node" parent="."]

[node name="Bigode" type="Sprite" parent="Rosto-do-Criador"]
light_mask = 0
position = Vector2( 82.5894, 124.395 )
scale = Vector2( 3.25991, 2.9183 )
texture = ExtResource( 34 )
hframes = 2
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rosto-do-Criador/Bigode"]
anims/Apaga = SubResource( 19 )
anims/Rosto_movendo = SubResource( 20 )

[connection signal="animation_finished" from="TextBox/TextBoxContainer/AnimationPlayerTxtBox" to="." method="_on_AnimationPlayerTxtBox_animation_finished"]
[connection signal="tween_all_completed" from="TextBox/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="TextBox/Botoes/ButtonDia" to="." method="_on_ButtonDia_pressed"]
[connection signal="pressed" from="TextBox/Botoes/ButtonNoite" to="." method="_on_ButtonNoite_pressed"]
[connection signal="pressed" from="TextBox/btn" to="." method="_on_btn_pressed"]
[connection signal="animation_finished" from="Ovos/OVO-BLUE/AnimationOvoAzul" to="." method="_on_AnimationOvoAzul_animation_finished"]
[connection signal="animation_finished" from="Ovos/OVO-VERDE/AnimationOvoVerde" to="." method="_on_AnimationOvoRosa_animation_finished"]
[connection signal="animation_finished" from="transição/ColorRect/AnimacaoTransicao" to="." method="_on_AnimacaoTransicao_animation_finished"]
